--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,6 +20,7 @@
 .nav__centered {
     display: flex;
     flex-flow: row nowrap;
+    margin-left: 1em;
 }
 
 .nav__item {
