--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,6 @@ body {
   font-size: 1.5em;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
@@ -53,7 +51,7 @@ h1 {
   cursor: pointer;
   font-size: 0.7em;
   justify-self: center;
-  transition: var(--btnHover);
+  transition: .1s;
 }
 
 .btn:hover {
